# paraprog

./: .gitignore  CMakeLists.txt  readme  readme.md
.github/workflows/: cmake.yml
Main/: CMakeLists.txt  main.cpp
MatrixLib/: CMakeLists.txt
MatrixLib/include/: MPITools.hpp  Matrix.hpp  PlotMatrix.hpp  RowSparseMatrix.hpp  SparseMatrix.hpp
MatrixLib/src/: MPITools.cpp  Matrix.cpp  PlotMatrix.cpp  RowSparseMatrix.cpp
tests/: Test.py  Validate.py  left.txt  mult.txt  right.txt  sum.txt
